--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-spinners": "^0.8.1",
     "react-test-renderer": "^16.12.0"
   },
   "scripts": {
