--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-spinners": "^0.8.1",
-    "react-test-renderer": "^16.12.0"
+    "react-test-renderer": "^16.12.0",
+    "react-webcam": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
